added filter logic for full groups and for community status

--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "info": "next info"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@mui/styled-engine-sc": "^7.3.6",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.1",
     "next": "^14.0.4",
@@ -17,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3",
+    "styled-components": "^6.1.19",
     "swr": "^2.2.4"
   },
   "devDependencies": {
