--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^7.3.6",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.1",
+    "ivrita": "^1.0.1",
     "next": "^14.0.4",
     "nodemailer": "^6.9.5",
     "react": "^18.2.0",
