--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,27 @@
 {
-  "name": "Product Jam Kit",
-  "short_name": "Jam Kit",
+  "name": "הרשמה טובה",
+  "short_name": "הרשמה טובה",
+  "description": "מערכת הרשמה לקבוצות וסדנאות של מרחבי אדמה טובה",
+  "start_url": "/",
+  "scope": "/",
   "icons": [
     {
-      "src": "/icons/logo-192.png",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-180.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
     }
   ],
   "display": "standalone",
-  "theme_color": "#2b2d40",
-  "background_color": "#ffffff"
+  "orientation": "portrait",
+  "theme_color": "#4a90e2",
+  "background_color": "#ffffff",
+  "dir": "rtl",
+  "lang": "he"
 }
