--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/workshop-reminders",
       "schedule": "0 6 * * *"
+    },
+    {
+      "path": "/api/cleanup-notifications",
+      "schedule": "0 7 * * *"
     }
   ]
 }
