--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^2.10.3",
+    "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "swr": "^2.2.4"
   },
