--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.1",
     "ivrita": "^1.0.1",
+    "lucide-react": "^0.562.0",
     "next": "^14.0.4",
     "nodemailer": "^6.9.5",
     "react": "^18.2.0",
