--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "recharts": "^2.10.3",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
