--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "swr": "^2.2.4",
+    "web-push": "^3.6.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/nodemailer": "^6.4.11",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/web-push": "^3.6.4",
     "eslint": "^8",
     "eslint-config-next": "^14.0.4",
     "typescript": "^5"
