background fix + manifast fix

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,7 +20,7 @@
   ],
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "#EAEEF3",
+  "theme_color": "#E2E8F0",
   "background_color": "#ffffff",
   "dir": "rtl",
   "lang": "he"
