--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,15 +6,15 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/icons/logo.png",
+      "src": "/icons/logo.svg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/icons/logo.png",
+      "src": "/icons/logo.svg",
       "sizes": "180x180",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     }
   ],
